--- a/UnamWebPanel/plus/plus.css
+++ b/UnamWebPanel/plus/plus.css
@@ -85,6 +85,8 @@
     float: right;
 }
 
+#chooseOnlineOffline,
+#timeIntervalOnlineOffline,
 #timeIntervalExtra,
 #timeIntervalHashrate,
 #btnDefault,
