--- a/UnamWebPanel/plus/plus.css
+++ b/UnamWebPanel/plus/plus.css
@@ -85,6 +85,14 @@
     float: right;
 }
 
+#chartHashrate,
+#chartExtra,
+#chartOnlineOffline,
+#chartCountries {
+    width: 100% !important;
+    height: 100% !important;
+}
+
 #chooseOnlineOffline,
 #timeIntervalOnlineOffline,
 #timeIntervalExtra,
