--- a/UnamWebPanel/plus/plus.css
+++ b/UnamWebPanel/plus/plus.css
@@ -29,9 +29,14 @@
     padding-bottom: 10px;
 }
 
-.isActive {
-    background-color: #28a745;
-    box-shadow: 0px 0px 10px #28a745;
+.isHashrate {
+    background-color: #28a745 !important;
+    box-shadow: 0px 0px 10px #28a745 !important;
+}
+
+.isMiners {
+    background-color: #e69b00;
+    box-shadow: 0px 0px 10px #e69b00;
 }
 
 .plus-section {
